# pomo

./: .gitignore  AGENTS.md  CLAUDE.local.md  CLAUDE.md  LICENSE  Package.swift  README.md  ROADMAP.md  capture-watchfaces-puppeteer.js  chronograph.json  claude-roadmap-setup.sh  index.html  package.json  pnpm-lock.yaml  settings.html  shortcuts.html  tailwind.config.js  vite.config.ts
.claude/: mcp.json  settings.local.json
.claude/commands/: progress.md
.claude/examples/: roadmap-usage.md
.claude/scripts/: roadmap-parser.ts
.github/workflows/: deploy-landing.yml  macos-swift.yml  publish-cli-npm.yml  release-app-macos.yml
PomoWatch/: README.md
PomoiOS/: PomoiOSApp.swift  README.md
PomoiOS-App/PomoiOS-App/: PomoiOS_AppApp.swift
PomoiOS-App/PomoiOS-App.xcodeproj/: project.pbxproj
PomoiOS/Views/: SettingsView.swift
Resources/: AppIcon.icns
Sources/Pomo/: AppDelegate.swift
dev-toolbar-react/: .gitignore  README.md  package.json
landing/: MARKETING.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
legacy/: CLAUDE.md  WATCHFACE_GUIDE.md  claude-roadmap-commands.tar.gz.md  pnpm-lock.yaml  project.md  terminal.json
legacy/src-tauri/: Cargo.toml
legacy/src-tauri/capabilities/: default.json
screenshots/: README.md
scripts/: generate-app-icon.swift
specs/: FOCUS_MODE_SPEC.md  STATISTICS_DASHBOARD_SPEC.md
src/: App.tsx  index.css  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
watchface-analysis/: default-clean-analysis.md  neon-watchface-analysis.md  retro-lcd-analysis.md  versioning-guide.md
(+331 files in other folders)
