[package]
name = "pomo"
version = "0.2.0"
description = "A minimal floating Pomodoro timer"
authors = ["you"]
edition = "2021"

[lib]
name = "pomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
image = "0.25"
rusttype = "0.9"
env_logger = "0.11"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"
